syntax = "proto3";
package time;

option go_package = "github.com/MariumAZ/Zenly-tests/tree/main/NTP-server/time";

message TimeRequest {
    string ntpserver = 1;
}

message TimeReply {
    int64 timestamp = 1;
}

service Time {
    rpc GetTime(TimeRequest) returns (TimeReply) {}
}